remove font EmilysCandy and replace with Sedan SC

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,8 +47,8 @@ body {
   font-style: italic;
 }
 
-.emilys-candy-regular {
-  font-family: "Emilys Candy", serif;
+.sedan-sc-regular {
+  font-family: "Sedan SC", serif;
   font-weight: 400;
   font-style: normal;
 }
