Implement uploading several pictures functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,3 +52,23 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+.post-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 1rem;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
